--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -106,7 +106,7 @@ textarea::placeholder {
   font-family: "Poppins", sans-serif;
   color: white;
 
-  input[type="checkbox"] {
+  input[type="checkbox"] { // es fehlen noch input type text und input type email
     display: none;
   }
 
