--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -8,6 +8,7 @@ a {
     color: white;
     text-decoration: none;
     padding-right: 12px;
+    font-size: 1.4rem;
 }
 
 header {
@@ -19,5 +20,4 @@ header {
     align-items: center;
     height: 50px;
     padding: 37px 100px 37px 100px;
-    margin-bottom: 30px;
 }
