added burger menu to header

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<div class="contact-section">
+<div class="contact-section" id="contact">
   <div class="contact-line"></div>
   <h1>Contact</h1>
   <div class="contact-form-section">
@@ -60,5 +60,5 @@
   </div>
 </div>
 <div class="arrow-wrapper">
-  <a href="#"><img [src]="arrowSrc" alt="arrow" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)"></a>
+  <a href="#intro"><img [src]="arrowSrc" alt="arrow" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)"></a>
 </div>
