--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div class="intro-section">
+<div class="intro-section" id="intro">
     <div class="intro-element2"><img src="../../assets/intro-overlapping-image.png"></div>
     <div class="intro-element3"><img src="../../assets/intro-hero-character-photo.png"></div>
     <div class="intro-element4"><img src="../../assets/intro-shadows.png"></div>
