--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-section">
+<div class="portfolio-section" id="portfolio">
   <div class="portfolio-head">
     <h1>Portfolio</h1>
     <div class="portfolio-line"></div>
