--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,23 +1,96 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
 
 p {
-    color: white;
+  color: white;
 }
 
 a {
-    color: white;
-    text-decoration: none;
-    padding-right: 12px;
-    font-size: 1.4rem;
+  color: white;
+  text-decoration: none;
+  padding-right: 12px;
+  font-size: 1.4rem;
 }
 
 header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  padding: 37px 100px 37px 100px;
+
+  .icon.nav-icon-4 {
+    display: none;
+    width: 35px;
+    height: 30px;
+    position: relative;
+    cursor: pointer;
+
+    span {
+      background-color: white;
+      position: absolute;
+      border-radius: 2px;
+      transition: 0.3s cubic-bezier(0.8, 0.5, 0.2, 1.4);
+
+      &:nth-child(1) {
+        width: 100%;
+        height: 4px;
+        top: 0;
+        left: 0;
+      }
+
+      &:nth-child(2) {
+        width: 100%;
+        height: 4px;
+        top: 13px;
+        left: 0;
+      }
+
+      &:nth-child(3) {
+        width: 100%;
+        height: 4px;
+        bottom: 0;
+        left: 0;
+      }
+    }
+
+    &.open {
+      span:nth-child(1) {
+        top: 12px;
+        transform: rotate(45deg);
+      }
+
+      span:nth-child(2) {
+        top: 12px;
+        transform: rotate(-45deg);
+      }
+
+      span:nth-child(3) {
+        display: none;
+      }
+    }
+  }
+
+  nav {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
-    align-items: center;
-    height: 50px;
-    padding: 37px 100px 37px 100px;
+    gap: 12px;
+
+    a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.4rem;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .icon.nav-icon-4 {
+      display: block;
+    }
+
+    nav {
+      display: none;
+    }
+  }
 }
