completed burger menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<app-header></app-header>
+<app-header (menuToggle)="onMenuToggle($event)"></app-header>
 <main class="content-wrapper">
   <app-intro></app-intro>
   <app-about-me></app-about-me>
