--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -83,13 +83,22 @@ textarea {
 }
 
 button {
-  background-color: #b6b6b6;
+  background-color: #b6b6b6; // Grau (ungültig)
   color: white;
   padding: 10px 30px;
   margin-top: 24px;
   border: 2px solid #b6b6b6;
   border-radius: 5px;
+  cursor: not-allowed;
+  transition: background-color 0.3s ease, border 0.3s ease;
+
+  &.valid {
+    background-color: #00bf89; // Grün (gültig)
+    border: 2px solid #00bf89;
+    cursor: pointer;
+  }
 }
+
 
 input::placeholder {
   color: white;
