--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -20,15 +20,15 @@ header {
   align-items: center;
   height: 50px;
   padding: 37px 100px;
-  position: relative; 
+  position: relative;
 
   .icon.nav-icon-4 {
     display: none;
     width: 35px;
     height: 30px;
-    position: relative; 
+    position: relative;
     cursor: pointer;
-    z-index: 2000; 
+    z-index: 2000;
 
     span {
       background-color: white;
@@ -93,23 +93,24 @@ header {
 
   // Mobile-Navigation
   .mobile-menu {
-    display: none; 
+    display: none;
     position: absolute;
     top: 124px;
     left: 0;
     width: 100vw;
     height: calc(100vh - 127px);
-    background-color: rgba(0, 0, 0, 0.9); 
-    flex-direction: column; 
+    background-color: rgba(0, 0, 0, 0.9);
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 1000; 
+    z-index: 1000;
+    padding: 0;
 
     a {
       color: white;
       text-decoration: none;
       font-size: 1.8rem;
-      padding: 15px 0; 
+      padding: 15px 0;
     }
 
     &.open {
@@ -122,13 +123,31 @@ header {
     }
 
     @media (min-width: 1201px) {
-      display: none; 
+      display: none;
     }
   }
 
   @media (max-width: 1200px) {
     .icon.nav-icon-4 {
       display: block;
+    }
+  }
+
+  @media (max-width: 768px) {
+    header {
+      padding: 37px 50px !important;
+    }
+  }
+
+  @media (max-width: 560px) {
+    header {
+      padding: 37px 25px  !important;
+    }
+  }
+
+  @media (max-width: 360px) {
+    header {
+      padding: 37px 15px;
     }
   }
 }
