--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -24,6 +24,6 @@
 
     </div>
     <div class="about-me-right">
-        <img src="../../assets/about-me-icon-group.png" class="about-me-group" alt="">
+        <img src="../../assets/about-me_02.png" class="about-me-group" alt="">
     </div>
 </div>
