--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer-section">
     <div class="footer-line"></div>
     <div class="footer-logo-and-social">
-        <img src="../../assets/logo.png" alt="">
+        <img src="../../assets/Logo_gs_02.png" alt="">
         <p>© Gloria Schaffarczyk 2024</p>
         <div class="footer-social-media-links">
             <img src="../../assets/intro-icon-github.png" alt="">
