--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="../../assets/logo.png" alt="Logo" />
+    <img src="../../assets/Logo_gs_02.png" alt="Logo" id="logo" />
     <div
       class="icon nav-icon-4"
       (click)="toggleMenu()"
