--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -145,3 +145,10 @@ header {
       padding: 37px 25px;
     }
   }
+
+  @media (max-width: 360px) {
+    img {
+        width: 160px;
+        height: auto;
+    }
+}
