--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,6 +1,6 @@
 <div class="intro-section" id="intro">
     <div class="intro-element2"><img src="../../assets/intro-overlapping-image.png"></div>
-    <div class="intro-element3"><img src="../../assets/intro-hero-character-photo.png"></div>
+    <div class="intro-element3"><img src="../../assets/Gloria_09.png"></div>
     <div class="intro-element4"><img src="../../assets/intro-shadows.png"></div>
     <div class="intro-element1">
         <svg class="full-name" width="100%" height="auto" viewBox="0 0 742 162" fill="none"
