added hover to some buttons and added pictures

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 <div class="about-me-section" id="about-me">
     <div class="about-me-left">
         <h1>About me</h1>
-        <p>Hey there! I'm Simon, a frontend developer fueled by a
+        <p>Hey there! I'm Gloria, a frontend developer fueled by a
             passion for crafting user-friendly digital experiences.
             With a talent for problem-solving and an eye for detail,
             I specialize in translating complex ideas into elegant designs.
@@ -9,7 +9,7 @@
         <p>Let's connect and create something amazing together!</p>
         <div class="about-me-bullet-points">
             <div class="about-me-bullet-point"><img src="../../assets/about-me-icon-location.png" alt="">
-                <p>Flexible in terms of working environments, I can work effectively both on-site in Munich and remotely.</p>
+                <p>Flexible in terms of working environments, I can work effectively both on-site in Kempten and remotely.</p>
             </div>
             <div class="about-me-bullet-point"><img src="../../assets/about-me-icon-lightbulb.png" alt="">
                 <p>I am open-minded and always looking for personal challenges to constantly improve my knowledge and skills.</p>
