--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -21,7 +21,7 @@
     </div>
     <h2 class="d-none">Looking for <strong style="color: #ff3f79">another skill</strong>?</h2>
     <span class="d-none">Feel free to contact me. I look forward to expanding on my previous knowledge.</span>
-    <button class="d-none">Get in touch</button>
+    <a href="#contact"><button class="d-none">Get in touch</button></a> 
   </div>
   <div class="skills-right">
     <div class="skills-line"></div>
@@ -30,7 +30,7 @@
       <span>I have gained experience in building projects with different frontend technologies and concepts.</span>
       <h2>Looking for <strong style="color: #ff3f79">another skill</strong>?</h2>
       <span>Feel free to contact me. I look forward to expanding on my previous knowledge.</span>
-      <button>Get in touch</button>
+      <a href="#contact"><button>Get in touch</button></a>
     </div>
   </div>
 </div>
