added hover to buttons in intro and portfolio

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -21,9 +21,9 @@
 <div class="social-media-and-contact">
     <div class="intro-line"></div>
     <div class="intro-contact-symbols">
-        <img src="../../assets/intro-icon-github.png" alt="">
-        <img src="../../assets/intro-icon-email.png" alt="">
-        <img src="../../assets/intro-icon-linkedin.png" alt="">
+        <a href=""><img src="../../assets/intro-icon-github.png" alt=""></a>
+        <a href=""><img src="../../assets/intro-icon-email.png" alt=""></a>
+        <a href=""><img src="../../assets/intro-icon-linkedin.png" alt=""></a>
         <span class="mailto-long"><a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a></span>
     </div>
 </div>
