--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -120,11 +120,22 @@
   justify-content: center;
   gap: 40px;
   padding-left: 200px;
-
+  transition: all 0.3s ease;
+  cursor: pointer;
   a {
     text-decoration: none;
     color: $text-color;
     font-size: $font-size;
+  }
+
+  img {
+    &:hover {
+      transform: scale(1.2); 
+    }
+  
+    &:active {
+      transform: scale(0.95);
+    }
   }
 }
 
