added hover to buttons and new testimonials

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -65,7 +65,7 @@
   </div>
 </div>
 <div class="arrow-wrapper">
-  <a href="#intro">
+  <a href="#header">
     <img [src]="arrowSrc" alt="arrow" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)" />
   </a>
 </div>
