--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<header>
-    <img src="../../assets/Logo_gs_02.png" alt="Logo" id="logo" />
+<header id="header">
+    <a href="#header"><img src="../../assets/Logo_gs_02.png" alt="Logo" id="logo" /></a>
     <div
       class="icon nav-icon-4"
       (click)="toggleMenu()"
