--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -44,6 +44,9 @@
     justify-content: center;
     align-items: center;
     gap: 24px;
+    &:hover img {
+      transform: scale(1.1); 
+    }
 
     > p {
       padding-left: 16px;
