--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 <div class="footer-section">
     <div class="footer-line"></div>
     <div class="footer-logo-and-social">
-        <img src="../../assets/Logo_gs_02.png" alt="">
+        <a href="#header"><img src="../../assets/Logo_gs_02.png" alt=""></a>
         <p>© Gloria Schaffarczyk 2024</p>
         <div class="footer-social-media-links">
-            <img src="../../assets/intro-icon-github.png" alt="">
-            <img src="../../assets/intro-icon-email.png" alt="">
-            <img src="../../assets/intro-icon-linkedin.png" alt="">
+            <a href="#"><img src="../../assets/intro-icon-github.png" alt=""></a>
+            <a href="#"><img src="../../assets/intro-icon-email.png" alt=""></a>
+            <a href="#"><img src="../../assets/intro-icon-linkedin.png" alt=""></a>
         </div>
     </div>
-    <div class="footer-imprint"><p>Imprint</p></div>
+    <div class="footer-imprint"><a href="#"><p>Imprint</p></a></div>
 </div>
 
